personal log now shows the team/folder/encryptable variable and if an info message is shown if the encryptable was deleted.

--- a/frontend/translations/ch_be.yml
+++ b/frontend/translations/ch_be.yml
@@ -357,7 +357,8 @@ ch_be:
     info: Persöhnlechs aktivitäts Protokou
     action: Aktion
     date: Datum
-    where: Änderig
+    encryptable: Team/Ordner/Encryptable
+    deleted: Ds encryptable isch glöscht worde.
 
   flashes:
     api:
