Revert "Continued frontend implementation for personal log. Refresh on /log doesnt work and paper trail feature aren't included yet."
This reverts commit 903cecdbb8a7beaf06a208f99973997791d3aa9f.

--- a/frontend/translations/ch_be.yml
+++ b/frontend/translations/ch_be.yml
@@ -29,7 +29,7 @@ ch_be:
   settings: Istellige
   recrypt_requests: Recrypt Afragä
   users: Benutzer
-  log_title: Protokou
+  log: Protokou
   profile_title: Profiu
   change_password: Passwort wächslä
   last_login_date_and_from: "Ds letschtä Login isch am %{last_login_at} gsi vo %{last_login_from}"
@@ -352,12 +352,6 @@ ch_be:
         five_mins: Füf minutä
         twelve_hours: Zwöuf Stung
         infinite: Eewigs
-      
-  log:
-    info: Persöhnlechs aktivitäts Protokou
-    action: Aktion
-    date: Datum
-    where: Änderig
 
   flashes:
     api:
