add load more button to always load 10 logs at a time

--- a/frontend/translations/de.yml
+++ b/frontend/translations/de.yml
@@ -98,6 +98,7 @@ de:
       copy_password: Passwort kopieren
       copy_username: Benutzername kopieren
       add_attachment: Anhang hinzufügen
+      load_more: Mehr anzeigen
     new:
       title: Neues Encryptable
     log:
