--- a/frontend/translations/fr.yml
+++ b/frontend/translations/fr.yml
@@ -98,6 +98,7 @@ fr:
       copy_password: Copier le mot de passe
       copy_username: Copier le nom d'utilisateur
       add_attachment: Ajouter un attachement
+      load_more: Charger plus
     new:
       title: Nouveau compte
     log:
