add load more button to always load 10 logs at a time

--- a/frontend/translations/ch_be.yml
+++ b/frontend/translations/ch_be.yml
@@ -130,6 +130,7 @@ ch_be:
       copy_password: Passwort kopierä
       copy_username: Benutzername kopierä
       add_attachment: Anhang hinzufüegä
+      load_more: Meh aazeige
     new:
       title: Nöie Encryptable
     log:
